--- a/config/two_percent_milk.conf
+++ b/config/two_percent_milk.conf
@@ -2,8 +2,8 @@
 # SPDX-License-Identifier: MIT
 
 # Uncomment the following lines to enable RGB Underglow
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
+# CONFIG_ZMK_RGB_UNDERGLOW=n
+# CONFIG_WS2812_STRIP=n
 
 # Uncomment the following line to turn on logging, and set ZMK logging to debug output
 # CONFIG_ZMK_USB_LOGGING=y
